[project]
name = "ff-data-cli"
version = "0.1.0"
description = "CLI to pull fantasy football data from public APIs (Sleeper, ESPN, MFL, etc.)"
authors = [{ name = "ff-cli" }]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pandas>=2.2.2",
  "python-slugify>=8.0.4"
]

[project.scripts]
ff = "ff_data_cli.cli:app"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ff_data_cli*"]

